fixing merge conflicts

--- a/eaton.frontend/src/components/quote/css/quote.scss
+++ b/eaton.frontend/src/components/quote/css/quote.scss
@@ -15,7 +15,7 @@
   &__image {
     width: 80px;
     height: 82px;
-    background: url('/content/dam/eaton/images/Quote.png') no-repeat;
+    background: $color__primary-blue;
     position: absolute;
     top: 0;
     left: 0;
