TTIL vew: M56 Article Feature for Secondary landing page.

--- a/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
@@ -9,3 +9,4 @@
 @import 'views/view-l2-hero';
 @import 'views/view-single-feature';
 @import 'views/view-feature-block';
+@import 'views/view-article-feature';
