--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="../data/view-default-3-column-data.js">
 
-    <div class="eaton-list-component eaton-list-component-default-view container-fluid">
+    <div class="eaton-list-component eaton-list-component-default-view">
     
         <!--/* Desktop/Tablet Layout */-->
         <div class="row hidden-xs visible-sm visible-md visible-lg">
