--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -50,3 +50,23 @@
   .feature-block-component__copy { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; } }
 
 @media screen and (min-width: 768px) and (max-width: 991px) { .feature-block-component__container { height: 400px; } }
+
+.eaton-title-text-image { font-family: "Eaton", Arial, sans-serif; }
+
+.article-feature-image { width: 100%; height: auto; margin-top: 120px; }
+
+.article-feature-title { font-size: 1.5em; font-weight: bold; color: #333F48; text-transform: uppercase; margin-top: 60px; }
+
+.article-feature-cta { margin-top: 30px; color: #005EB8; font-size: 2.5em; font-family: Arial; font-weight: bold; padding-right: 7%; margin-top: 30px; margin-bottom: 30px; }
+
+.article-feature-cta a:hover, .article-feature-cta a:active, .article-feature-cta a:visited, .article-feature-cta a:focus { text-decoration: none; color: #005EB8; }
+
+.article-feature-date { margin-bottom: 60px; }
+
+.article-feature-body { margin-bottom: 120px; padding-right: 7%; }
+
+@media only screen and (max-width: 767px) { .article-feature-image { margin-top: 60px; }
+  .article-feature-title { font-size: 1.1em; margin-top: 30px; }
+  .article-feature-date { margin-bottom: 30px; }
+  .article-feature-body { margin-bottom: 60px; line-height: 1.5em; font-size: 1.2em; }
+  .article-feature-cta { padding-right: 1%; font-size: 1.5em; margin-top: 15px; margin-bottom: 15px; } }
