--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
@@ -1,7 +1,19 @@
 <sly data-sly-use.data="../data/title-data.js">
 
   <div class="eaton-title eaton-title--default">
+
+    <!--/* If Grid Enabled - Open Grid */-->
+    <sly data-sly-test="${properties.toggleInnerGrid}">
+      <div class="container">
+    </sly>
+
     <h2 class="eaton-title__headline">${ data.headlineShort }</h2>
+
+    <!--/* If Grid Enabled - Close Grid */-->
+    <sly data-sly-test="${properties.toggleInnerGrid}">
+      </div>
+    </sly>
+
   </div>
 
 </sly>
