--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
@@ -42,10 +42,10 @@
     position: absolute;
     bottom: 25px;
     color: $color__white;
-    width: 10%;
+    width: 100%;
     font-size: 1.5em;
     z-index: 10;
-    left: 47%;
+    text-align: center;
   }
 
   &__arrow {
