--- a/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
@@ -35,4 +35,4 @@ $base__line-height: 1.5;
 // $font-family__primary: get-locale-font();
 // $font-family__secondary: get-locale-font('font__secondary');
 $font-family__primary: 'Eaton', Arial, sans-serif;
-$font-family__secondary: 'Arial', sans-serif;
+$font-family__secondary: Arial, 'Arial', sans-serif;
