--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -92,6 +92,14 @@ h5,
   @extend %body-copy;
 }
 
+.eyebrow-large {
+  @extend %eyebrow-large;
+}
+
+.eyebrow-small {
+  @extend %eyebrow-small;
+}
+
 
 // Custom Text Elements
 //--------------
@@ -102,8 +110,8 @@ h5,
 // Eg: <a href="#" class="body-link heading-h5">...</a>
 //---------------------
 
-
 // TODO: TBD
+// sass-lint:disable no-css-comments
 /*
 .body-link {
   color: $color__primary-blue;
@@ -123,46 +131,5 @@ h5,
       color: $color__white; //TBD
     }
   }
-}
-
-.body-copy {
-  background: inherit;
-  font-size: 2.2rem;
-  line-height: 3.5rem;
-  color: $color__primary-gray1;
-}
-
-.body-copy-small {
-  color: $color__primary-gray1;
-  font-family: $font-family__secondary;
-  font-size: 26px;
-  line-height: 34px;
-}
-
-.eyebrow-small {
-  color: $color__primary-gray1;
-  font-family: $font-family__secondary;
-  font-size: 28px;
-  font-weight: bold;
-  line-height: 34px;
-}
-
-
-
-//-----------------------------------
-// Media-Query: Desktop
-//-----------------------------------
-@include media-desktop-and-up {
-
-  .body-copy-small {
-    font-size: 18px;
-    line-height: 24px;
-  }
-
-  .eyebrow-small {
-    font-size: 18px;
-    line-height: 24px;
-  }
-
 }
 */
