--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -26,6 +26,14 @@ h5, .heading-h5 { font-family: Arial, sans-serif; font-size: 20px; font-weight: 
 
 @media screen and (min-width: 992px) { .body-copy, .body-copy-small { font-size: 24px; line-height: 38px; } }
 
+.eyebrow-large { color: #333F48; font-family: Arial, "Arial", sans-serif; font-size: 17px; line-height: 20px; text-transform: uppercase; }
+
+@media screen and (min-width: 992px) { .eyebrow-large { font-size: 24px; line-height: 38px; } }
+
+.eyebrow-small { color: #333F48; font-family: Arial, "Arial", sans-serif; font-size: 14px; line-height: 17px; text-transform: uppercase; }
+
+@media screen and (min-width: 992px) { .eyebrow-small { font-size: 18px; line-height: 24px; } }
+
 @font-face { font-family: 'Eaton'; src: url("fonts/EatonRegular.woff") format("woff"); }
 
 @font-face { font-family: 'EatonMedium'; src: url("fonts/EatonMedium.woff") format("woff"); }
@@ -34,7 +42,7 @@ h5, .heading-h5 { font-family: Arial, sans-serif; font-size: 20px; font-weight: 
 
 @font-face { font-family: 'Arial'; src: url("fonts/Arial.woff"); }
 
-body { color: #333F48; font-family: "Arial", sans-serif; font-size: 16px; }
+body { color: #333F48; font-family: Arial, "Arial", sans-serif; font-size: 16px; }
 
 b, strong { font-weight: bold; }
 
@@ -46,7 +54,7 @@ p { line-height: 1.3; }
 
 h1, h2, h3, .heading-h1, .heading-h2, .heading-h3 { font-family: "Eaton", Arial, sans-serif; }
 
-h4, h5, .heading-h5, .heading-h6 { font-family: "Arial", sans-serif; }
+h4, h5, .heading-h5, .heading-h6 { font-family: Arial, "Arial", sans-serif; }
 
 h1, .heading-h1 { margin-top: 0; }
 
@@ -58,68 +66,7 @@ h4, .heading-h4 { margin-top: 0; }
 
 h5, .heading-h5 { margin-top: 0; }
 
-/*
-.body-link {
-  color: $color__primary-blue;
-
-  &:hover,
-  &:focus,
-  &:active {
-    color: $color__accent-darkblue; //TBD
-  }
-
-  .dark-theme & {
-    color: $color__white;
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: $color__white; //TBD
-    }
-  }
-}
-
-.body-copy {
-  background: inherit;
-  font-size: 2.2rem;
-  line-height: 3.5rem;
-  color: $color__primary-gray1;
-}
-
-.body-copy-small {
-  color: $color__primary-gray1;
-  font-family: $font-family__secondary;
-  font-size: 26px;
-  line-height: 34px;
-}
-
-.eyebrow-small {
-  color: $color__primary-gray1;
-  font-family: $font-family__secondary;
-  font-size: 28px;
-  font-weight: bold;
-  line-height: 34px;
-}
-
-
-
-//-----------------------------------
-// Media-Query: Desktop
-//-----------------------------------
-@include media-desktop-and-up {
-
-  .body-copy-small {
-    font-size: 18px;
-    line-height: 24px;
-  }
-
-  .eyebrow-small {
-    font-size: 18px;
-    line-height: 24px;
-  }
-
-}
-*/
+/* .body-link { color: $color__primary-blue; &:hover, &:focus, &:active { color: $color__accent-darkblue; //TBD } .dark-theme & { color: $color__white; &:hover, &:focus, &:active { color: $color__white; //TBD } } } */
 .u-flex { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
 .u-inline-flex { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; }
