--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
@@ -2,16 +2,14 @@
 
   <div class="eaton-title eaton-title--default">
 
-    <!--/* If Grid Enabled - Open Grid */-->
-    <sly data-sly-test="${properties.toggleInnerGrid}">
-      <div class="container">
-    </sly>
+    <!--/* If Grid Enabled */-->
+    <div data-sly-test="${ properties.toggleInnerGrid }" class="container">
+      <h2 class="eaton-title__headline">${ data.headlineShort }</h2>
+    </div>
 
-    <h2 class="eaton-title__headline">${ data.headlineShort }</h2>
-
-    <!--/* If Grid Enabled - Close Grid */-->
-    <sly data-sly-test="${properties.toggleInnerGrid}">
-      </div>
+    <!--/* If Grid NOT-Enabled */-->
+    <sly data-sly-test="${ !properties.toggleInnerGrid }">
+      <h2 class="eaton-title__headline">${ data.headlineShort }</h2>
     </sly>
 
   </div>
