--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
@@ -2,18 +2,22 @@
 
   <div class="eaton-title eaton-title--eyebrow-and-byline">
 
-    <!--/* If Grid Enabled - Open Grid */-->
-    <sly data-sly-test="${properties.toggleInnerGrid}">
-      <div class="container">
-    </sly>
+    <!--/* If Grid Enabled */-->
+    <div data-sly-test="${ properties.toggleInnerGrid }"
+      class="container">
+      <div class="eaton-title__eyebrow eyebrow-small">${ data.eyebrow }</div>
+      <h2 class="eaton-title__headline heading-h1">${ data.headline }</h2>
+      <div data-sly-test="${ data.byline }"
+        class="eaton-title__byline body-copy-small">${ data.byline }</div>
+    </div>
 
-    <h2 class="eaton-title__eyebrow">${ data.eyebrow }</h2>
-    <h2 class="eaton-title__headline">${ data.headline }</h2>
-    <h2 class="eaton-title__byline">${ data.byline }</h2>
 
-    <!--/* If Grid Enabled - Close Grid */-->
-    <sly data-sly-test="${properties.toggleInnerGrid}">
-      </div>
+    <!--/* If Grid NOT-Enabled */-->
+    <sly data-sly-test="${ !properties.toggleInnerGrid }">
+      <div class="eaton-title__eyebrow eyebrow-small">${ data.eyebrow }</div>
+      <h2 class="eaton-title__headline heading-h1">${ data.headline }</h2>
+      <div data-sly-test="${ data.byline }"
+        class="eaton-title__byline body-copy-small">${ data.byline }</div>
     </sly>
 
   </div>
