Styles to debug `mega-menu` - authoring mode

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -41,6 +41,8 @@
 
 @media screen and (min-width: 992px) { .nav-open.level-2-open .mega-menu { visibility: visible; opacity: 1; overflow-y: auto; height: 400px; } }
 
-.aem-AuthorLayer-Edit .eaton-header .mega-menu { position: relative !important; visibility: visible !important; opacity: 1 !important; }
+.aem-AuthorLayer-Edit .eaton-header .mega-menu, .cq-wcm-edit .eaton-header .mega-menu { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
 
-.aem-AuthorLayer-Edit .eaton-header .mega-menu__content { display: block !important; }
+.aem-AuthorLayer-Edit .eaton-header .mega-menu__content, .cq-wcm-edit .eaton-header .mega-menu__content { display: block !important; }
+
+.aem-AuthorLayer-Edit .eaton-header .mega-menu--fixed, .cq-wcm-edit .eaton-header .mega-menu--fixed { position: relative !important; }
