--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -95,15 +95,21 @@
 // AEM Author Mode Styles
 //-----------------------------------
 
-.aem-AuthorLayer-Edit { // sass-lint:disable-line class-name-format
+.aem-AuthorLayer-Edit, // sass-lint:disable-line class-name-format
+.cq-wcm-edit  {
   .eaton-header {
     .mega-menu {
       position: relative !important; // sass-lint:disable-line no-important
       visibility: visible !important; // sass-lint:disable-line no-important
       opacity: 1 !important; // sass-lint:disable-line no-important
+      z-index: 99999 !important;
 
       &__content {
         display: block !important; // sass-lint:disable-line no-important
+      }
+
+      &--fixed {
+        position: relative !important;
       }
     }
   }
