Include Column support for 50% width - Mega Menu

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -22,7 +22,8 @@
   .mega-menu__row .mega-menu__col:last-child { margin-bottom: 0; } }
 
 @media screen and (min-width: 992px) { .mega-menu { opacity: 0; visibility: hidden; -webkit-transition: opacity 0.1s ease-in-out; transition: opacity 0.1s ease-in-out; }
-  .mega-menu__col--4 { -ms-flex-preferred-size: 25%; flex-basis: 25%; } }
+  .mega-menu__col--4 { -ms-flex-preferred-size: 25%; flex-basis: 25%; }
+  .mega-menu__col--6 { -ms-flex-preferred-size: 50%; flex-basis: 50%; } }
 
 .mega-menu-title { padding: 30px 0; font-size: 20px; }
 
