--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -27,6 +27,8 @@
 
 .featured-story-component__text { color: #FFF; font-size: 2.30em; font-family: "Eaton", Arial, sans-serif; line-height: 1.25em; padding-top: 30px; }
 
+.featured-story-component__row--nopadding { padding: 0; }
+
 .featured-story-component__arrow { font-size: .70em; left: 10px; }
 
 .featured-story-component__title { font-size: 2.55em; }
@@ -39,8 +41,10 @@
 
 .featured-story-component__blue--left { left: 0; }
 
-@media screen and (max-width: 991px) { .featured-story-component__blue { position: relative; }
+@media screen and (max-width: 767px) { .featured-story-component__blue { position: relative; }
   .featured-story-component__row { padding-bottom: 20px; } }
+
+@media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; font-size: 1.75em; } }
 
 .eaton-page-overview { padding: 120px 0; }
 
