[T3] Add Extra Spacing Quote Component

--- a/eaton.frontend/src/components/quote/css/quote.scss
+++ b/eaton.frontend/src/components/quote/css/quote.scss
@@ -5,6 +5,9 @@
 @import "../../../global/css/_config/sass";
 
 .eaton-quote {
+
+  margin: $spacing__md 0;
+
   .container {
     padding: 100px 0 60px;
     border-top: 4px solid $color__secondary-gray2;
@@ -69,4 +72,3 @@
     }
   }
 }
-
