--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
@@ -1,3 +1,5 @@
+.eaton-quote { margin: 60px 0; }
+
 .eaton-quote .container { padding: 100px 0 60px; border-top: 4px solid #EEF0F2; border-bottom: 4px solid #EEF0F2; position: relative; }
 
 .eaton-quote__image { width: 80px; height: 82px; background: #005EB8; position: absolute; top: 0; left: 0; right: 0; margin: 0 auto; }
