--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -37,45 +37,45 @@ p {
 h1,
 h2,
 h3,
-.heading-h1,
-.heading-h2,
-.heading-h3 {
+.b-heading-h1,
+.b-heading-h2,
+.b-heading-h3 {
   font-family: $font-family__primary;
 }
 
 h4,
 h5,
-.heading-h5,
-.heading-h6 {
+.b-heading-h5,
+.b-heading-h6 {
   font-family: $font-family__secondary;
 }
 
 h1,
-.heading-h1 {
+.b-heading-h1 {
   @extend %h1;
   margin-top: 0;
 }
 
 h2,
-.heading-h2 {
+.b-heading-h2 {
   @extend %h2;
   margin-top: 0;
 }
 
 h3,
-.heading-h3 {
+.b-heading-h3 {
   @extend %h3;
   margin-top: 0;
 }
 
 h4,
-.heading-h4 {
+.b-heading-h4 {
   @extend %h4;
   margin-top: 0;
 }
 
 h5,
-.heading-h5 {
+.b-heading-h5 {
   @extend %h5;
   margin-top: 0;
 }
@@ -84,19 +84,19 @@ h5,
 
 // BodyCopy
 //--------------
-.body-copy {
+.b-body-copy {
   @extend %body-copy;
 }
 
-.body-copy-small {
+.b-body-copy-small {
   @extend %body-copy;
 }
 
-.eyebrow-large {
+.b-eyebrow-large {
   @extend %eyebrow-large;
 }
 
-.eyebrow-small {
+.b-eyebrow-small {
   @extend %eyebrow-small;
 }
 
