Styles - Updates - Proof Points (Header)

--- a/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
@@ -27,6 +27,12 @@
   @include size($size, $size);
 }
 
+// Size
+//--------------
+@mixin component-spacing($spacing : $spacing__sm) {
+  padding: $spacing 0;
+}
+
 
 // Layout Mixins
 //--------------
