--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -70,3 +70,5 @@
   .article-feature-date { margin-bottom: 30px; }
   .article-feature-body { margin-bottom: 60px; line-height: 1.5em; font-size: 1.2em; }
   .article-feature-cta { padding-right: 1%; font-size: 1.5em; margin-top: 15px; margin-bottom: 15px; } }
+
+.title-text-image-link { padding: 30px 0; }
