--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -102,14 +102,14 @@
       position: relative !important; // sass-lint:disable-line no-important
       visibility: visible !important; // sass-lint:disable-line no-important
       opacity: 1 !important; // sass-lint:disable-line no-important
-      z-index: 99999 !important;
+      z-index: 99999 !important; // sass-lint:disable-line no-important
 
       &__content {
         display: block !important; // sass-lint:disable-line no-important
       }
 
       &--fixed {
-        position: relative !important;
+        position: relative !important; // sass-lint:disable-line no-important
       }
     }
   }
