Defect Fixes - Proof Points

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
@@ -6,7 +6,10 @@
           <!--/* Icon List */-->
           <div data-sly-list="${ data.items }">
             <div class="col-xs-12 col-md-4 icon-list-proof-points__item">
-              <img class="icon-list-proof-points__image" src="${item.img}" alt="${item.facts} ${item.relatedText}" />
+              <div class="icon-list-proof-points__image">
+                <img src="${item.img}" alt="${item.facts} ${item.relatedText}" />
+              </div>
+              
               <div class="icon-list-proof-points__content">
                 <div class="icon-list-proof-points__facts">${item.facts}</div>
                 <div data-sly-test="${item.factSymbol}" class="icon-list-proof-points__symbol">${item.factSymbol}</div>
