--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -1,20 +1,24 @@
-.icon-list-proof-points__item { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.icon-list-proof-points__item { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.icon-list-proof-points__image { width: 80px; }
+.icon-list-proof-points__image { margin-top: 20px; }
+
+.icon-list-proof-points__image img { width: 80px; }
 
 .icon-list-proof-points__content { padding-left: 40px; }
 
-.icon-list-proof-points__facts { color: #00B2A9; font-weight: bold; line-height: 1; margin-left: -3px; display: inline-block; font-size: 100px; }
+.icon-list-proof-points__facts, .icon-list-proof-points__symbol { font-weight: bold; display: inline-block; color: #00B2A9; }
 
-.icon-list-proof-points__symbol { color: #00B2A9; font-weight: bold; position: relative; right: 0; display: inline-block; font-size: 50px; top: -30px; }
+.icon-list-proof-points__facts { line-height: 1; margin-left: -3px; }
 
-.icon-list-proof-points__related { font-size: 29px; }
+.icon-list-proof-points__symbol { position: relative; right: 0; font-size: 50px; top: -30px; }
 
-@media screen and (max-width: 991px) { .icon-list-proof-points__item { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 90px; }
-  .icon-list-proof-points__item:last-child { margin-bottom: 0; } }
+@media screen and (max-width: 991px) { .icon-list-proof-points__item { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 40px; }
+  .icon-list-proof-points__item:last-child { margin-bottom: 0; }
+  .icon-list-proof-points__facts { font-size: 83px; }
+  .icon-list-proof-points__related { font-size: 18px; } }
 
 @media screen and (min-width: 992px) { .icon-list-proof-points__facts { font-size: 75px; }
   .icon-list-proof-points__symbol { font-size: 45px; top: -20px; }
-  .icon-list-proof-points__related { font-size: 29px; } }
+  .icon-list-proof-points__related { font-size: 24px; } }
 
 .icon-list { padding: 30px 0; }
