Change the typography class - Eyebrow

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-download-list-desc.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-download-list-desc.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="../data/view-download-list-data.js">
     <div class="eaton-download-list eaton-download-list--has-desc">
-      <p class="eaton-download-list__headline eyebrow-small">${data.headline}</p>
+      <p class="eaton-download-list__headline b-eyebrow-small">${data.headline}</p>
 
       <!--/* List Links */-->
       <ul data-sly-list="${data.items}" class="eaton-download-list__links">
