--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
@@ -1,7 +1,7 @@
 <sly data-sly-use.data="../data/view-inline-data.js">
   <div class="eaton-search-inline">
     <!--/* If Headline */-->
-    <p class="eaton-search-inline__headline eyebrow-small">${data.headline}</p>
+    <p class="eaton-search-inline__headline b-eyebrow-small">${data.headline}</p>
 
     <!--/* Search Box */-->
     <form class="eaton-search-inline__form">
