--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-single-feature.html
@@ -1,12 +1,12 @@
 <sly data-sly-use.data="../data/view-single-feature-data.js">
     <div class="eaton-single-feature">
-      <p class="eaton-single-feature__headline eyebrow-small">${data.headline}</p>
+      <p class="eaton-single-feature__headline b-eyebrow-small">${data.headline}</p>
       <div class="eaton-single-feature__image">
         <img class="img-responsive" src="${data.image}" alt=${data.headline} />
       </div>
       <div class="eaton-single-feature__content">
           <!--/* Eyebrow */-->
-          <div class="eaton-single-feature__eyebrow eyebrow-small">${ data.eyebrow }</div>
+          <div class="eaton-single-feature__eyebrow b-eyebrow-small">${ data.eyebrow }</div>
 
           <!--/* List Links */-->
           <ul data-sly-list="${ data.links }" class="eaton-single-feature__links">
