--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
@@ -1,4 +1,4 @@
-.eaton-quote { margin: 60px 0; }
+.quote { padding: 30px 0; }
 
 .eaton-quote .container { padding: 100px 0 60px; border-top: 4px solid #EEF0F2; border-bottom: 4px solid #EEF0F2; position: relative; }
 
