--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -6,13 +6,42 @@
 
   b,
   strong {
-    font-weight: 700;
+    font-weight: bold;
   }
 
   i,
   em {
     font-style: italic;
   }
+
+  a {
+    text-decoration: underline;
+  }
+
+  // Unordered lists
+  //--------------
+  ul {
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      position: relative;
+      padding-left: 40px;
+
+      &::before {
+        @include square(6px); // Width & Height
+
+        content: '';
+        background-color: $color__primary-blue;
+        border-radius: 50%;
+        left: 20px;
+        position: absolute;
+        top: 8px;
+
+      }
+    }
+  }
+
 
   // Over DARK-Background
   //--------------
@@ -39,7 +68,11 @@
     // Unordered lists
     //--------------
     ul {
-
+      li {
+        &::before {
+          background-color: $color__white;
+        }
+      }
     }
 
 
