--- a/eaton.frontend/src/components/footer/css/footer.scss
+++ b/eaton.frontend/src/components/footer/css/footer.scss
@@ -17,9 +17,14 @@
   background: $color__primary-gray2;
   padding: 60px 0;
 
+  .eaton-text-default__content {
+    @extend %body-copy-small;
+  }
+
   .eaton-footer-top__link-list {
     margin-bottom: 40px;
   }
+
 }
 
 
