--- a/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
@@ -10,6 +10,7 @@
 @import 'views/view-single-feature';
 @import 'views/view-feature-block';
 @import 'views/view-article-feature';
+@import 'views/view-cards';
 
 .title-text-image-link {
   @include component-spacing();
