Update Title / Text Components Text styles

--- a/eaton.frontend/src/components/title/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-default.scss
@@ -3,8 +3,7 @@
 //-----------------------------------
 .eaton-title {
 
-  margin-top: $spacing__lg;
-  margin-bottom: $spacing__sm;
+  margin: 0;
 
   &__eyebrow {
     // Empty selector for future reference
