List Component - Adding missing div “container” from bootstrap and disable nested columns due to aditional/unexpected margins.

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -1,13 +1,15 @@
 <sly data-sly-use.data="../data/view-default-3-column-data.js">
 
     <div class="eaton-list-component eaton-list-component-default-view">
-    
+
+      <div class="container">
+
         <!--/* Desktop/Tablet Layout */-->
         <div class="row hidden-xs visible-sm visible-md visible-lg">
 
             <sly data-sly-test.colMDoffSet="${data.cards.length == 2 ? 'col-md-offset-2' : ''}" />
 
-            <div class="col-sm-10 col-sm-offset-1 ${colMDoffSet}" data-sly-list.slider="${data.cards}" role="listbox">
+            <div class="col-sm-10-- col-sm-offset-1-- ${colMDoffSet}--" data-sly-list.slider="${data.cards}" role="listbox">
                 <div class="col-sm-12 ${data.cards.length == 2 ? 'col-md-5' : 'col-md-4'}">
                     <a href="${slider.link_url}" class="equal-height-row tablet-card">
                         <div class="related-category--tablet-left">
@@ -50,7 +52,7 @@
                 </div>
             </div>
         </div>
-
+      </div>
     </div>
 
 </sly>
