Fix Bullets Position in rich-text-editor Container

--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -43,7 +43,7 @@
         border-radius: 50%;
         left: 20px;
         position: absolute;
-        top: 8px;
+        top: 0.6em;
 
       }
     }
