Updates on views.

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.data="../data/view-category-hero-data.js">
-    <div class="eaton-ttil-list-category-hero">
+    <div class="container-fluid eaton-ttil-list-category-hero">
         <div class="row">
             <div class="col-xs-12">
                 <img src="${data.image}" class="visible-xs img-responsive category-hero__header-image" />
