--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-article-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-article-feature.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="../data/view-article-feature-data.js">
 
-    <div class="eaton-title-text-image eaton-article-feature-view">
+    <div class="container-fluid eaton-title-text-image eaton-article-feature-view">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
                 <div>
