--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="../data/view-featured-article-data.js">
 
-    <div class="eaton-list-component eaton-list-component-featured-article-view">
+    <div class="container-fluid eaton-list-component eaton-list-component-featured-article-view">
         
         <!--/* Featured Article */-->
         <div class="row">
