--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -61,7 +61,7 @@
 
 .article-feature-title { font-size: 1.5em; font-weight: bold; color: #333F48; text-transform: uppercase; margin-top: 60px; }
 
-.article-feature-cta { margin-top: 30px; color: #005EB8; font-size: 2.5em; font-family: Arial; font-weight: bold; padding-right: 7%; margin-top: 30px; margin-bottom: 30px; }
+.article-feature-cta { color: #005EB8; font-size: 2.5em; font-family: Arial; font-weight: bold; padding-right: 7%; margin-top: 30px; margin-bottom: 30px; }
 
 .article-feature-cta a:hover, .article-feature-cta a:active, .article-feature-cta a:visited, .article-feature-cta a:focus { text-decoration: none; color: #005EB8; }
 
